.ingress-manifests/No-TLS-Secret-Passthrough-Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-ce-ssl-passthrough
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_hide_header X-Hello;
      add_header X-Hello FromProxy;
spec:
  rules:
    - host: dotnet-konf-sample.com
      http:
        paths:
          - backend:
              serviceName: dotnetkonf-ce
              servicePort: 443
