.ingress-manifests/Valid-TLS-Secret-Termination-Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-noc-ssl-termination
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ngress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_hide_header X-Hello;
      add_header X-Hello FromProxy;
spec:
  tls:
    - hosts:
        - dotnet-konf-sample.com
      secretName: ingress-tls
  rules:
    - host: dotnet-konf-sample.com
      http:
        paths:
          - backend:
              serviceName: dotnetkonf-noc
              servicePort: 80
            path: /(.*)
